<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/blue" >

        <TextView
            android:id="@+id/title_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/title_drawer_left"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/title_time"
            android:scaleType="centerInside"
            android:src="@drawable/jilu_42" />

        <ImageView
            android:id="@+id/title_drawer_right"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/title_time"
            android:scaleType="centerInside"
            android:src="@drawable/jilu_44" />

        <ImageView
            android:id="@+id/btn_top_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_press_bg"
            android:paddingLeft="10dp"
            android:paddingRight="40dp"
            android:scaleType="centerInside"
            android:tag="iv_right" />

        <TextView
            android:id="@id/btn_top_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_press_bg"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:tag="tv_right"
            android:text="@string/today"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="#f6f6f6"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="#666666" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="#666666" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/two"
            android:textColor="#666666" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/three"
            android:textColor="#666666" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/four"
            android:textColor="#666666" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/five"
            android:textColor="#666666" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/six"
            android:textColor="#666666" />
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/view_filpper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ViewFlipper>

</LinearLayout>