<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_ll_bottom"
    android:layout_width="match_parent"
    android:background="@color/line_grey"
    android:layout_height="wrap_content"
    android:orientation="horizontal">




        <LinearLayout
            android:id="@+id/ll_tir_num"
            android:layout_width="0dp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="达标时间占比(TIR)"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="10sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_tir_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="目标范围:3.9~10mmol/L"
                android:textColor="@color/text_gray_99"
                android:textSize="8sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_avg_tir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_tir_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_tir_target"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="目标:≥70%"
                    android:textColor="@color/text_gray_99" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:visibility="visible"
                    android:src="@mipmap/question" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_less_39_num"
            android:layout_width="0dp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:layout_marginLeft="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_lessthan_39_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/less_39"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="目标范围:3.9~10mmol/L"
                android:textSize="8sp"
                android:visibility="invisible"
                android:textColor="@color/text_gray_99" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lessthan_39_tir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_less_39_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_lessthan_39_target"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/target_less_1"
                    android:textColor="@color/text_gray_99" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:visibility="visible"
                    android:src="@mipmap/question" />

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_less_139_num"
            android:layout_width="0dp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:layout_marginLeft="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_lessthan_139_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/less_139"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="目标范围:3.9~10mmol/L"
                android:textSize="8sp"
                android:visibility="invisible"
                android:textColor="@color/text_gray_99" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lessthan_139_tir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_less_139_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_lessthan_139_target"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="目标:尽量小"
                    android:textColor="@color/text_gray_99" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:visibility="visible"
                    android:src="@mipmap/question" />

            </LinearLayout>

        </LinearLayout>






</LinearLayout>


